--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(CAudioClient C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(CAudioClient main.c fft.c fft.h)
+add_executable(CAudioClient main.c fft.c fft.h getDevices.c getDevices.h)
 target_link_libraries(CAudioClient pulse pulse-simple m)
