Refactor -> Constants header file| Networking with appropriate packets being sent -> strip is being updated aswell.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(CAudioClient C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(CAudioClient main.c "FFT Module/fft.c" "FFT Module/fft.h" "FetchDevices Module/getDevices.c" "FetchDevices Module/getDevices.h" "LED Module/led.c" "LED Module/led.h")
+add_executable(CAudioClient main.c "FFT/fft.c" "FFT/fft.h" "FetchDevices/getDevices.c" "FetchDevices/getDevices.h" "LED/led.c" "LED/led.h" "LED/colour.c" "LED/colour.h" Network/network.c Network/network.h Configs/constants.h)
 target_link_libraries(CAudioClient pulse pulse-simple m)
